--- a/IEEECTX_June_2020.ipynb
+++ b/IEEECTX_June_2020.ipynb
@@ -4,30 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Encryption and Decryption\n",
+    "# Basic Encryption and Decryption using Python\n",
     "\n",
-    "When we send a message over a network (any type of format), it is possible that can be captured by third party.  \n",
+    "When we send a message over a network (any type of format), it is possible that it can be captured by a third party. This could be a problem if the message contains some important information such as username, password, bank information, etc. This type of communication can be seen in Figure 1 below.  \n",
     "\n",
-    "Encryption is the process of converting normal message (plaintext) into meaningless message (Ciphertext). Whereas Decryption is the process of converting meaningless message (Ciphertext) into its original form (Plaintext). ... While decryption is the process of converting meaningless message into its original form.\n",
-    "\n",
-    "![GitHub Logo](pic/Enc011.png)\n",
+    "![Communication wothout Encryption](pic/Enc011.png)\n",
     "\n",
     "<center>Figure 1. Communication without Encryption/Decryption</center>\n",
+    "&nbsp;\n",
     "\n",
-    "\n",
-    "\n",
-    "Also\n",
-    "\n",
+    "One way to protect the information is by using Encryption. Encryption is the process of converting a message (plaintext) into a meaningless message (ciphertext). Even if this ciphertext is captured by a third party (a culprit, etc.), it will be difficult to understand without the required information such as a decryption key. After the receiver receives the chipertext, the original message (plaintext) will be recovered using Decryption. Decryption is the process of converting a meaningless message (Ciphertext) into its original form (Plaintext). A basic communication scheme with Encryption/Decryption is shown in Figure 2 below.\n",
     "\n",
     "![GitHub Logo](pic/Enc02.png)\n",
     "\n",
     "<center>Figure 2. Communication with Encryption/Decryption</center>\n",
     "\n",
+    "&nbsp;\n",
     "\n",
-    "\n",
-    "\n",
-    "Also\n",
-    "\n",
+    "A simple Encryption/Decryption example is shown in Figure 3. A user registers on a website and enters his/her information. This information will be stored in a database but it will be encrypted before stored. This will create extra protection even the database is hacked and all stored information is stolen. \n",
     "\n",
     "![GitHub Logo](pic/Enc03.png)\n",
     "\n",
@@ -40,19 +34,19 @@
    "source": [
     "# Part I - Simple Example\n",
     "\n",
-    "This section we will use all lower case characters  and numbers as the alphabet. "
+    "In this section, we will use all lower case characters and numbers as the alphabet."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 487,
    "metadata": {},
    "outputs": [],
    "source": [
     "plaintext='hello there agent 007.' # our plaintext\n",
-    "alphabet=list('abcedfghijklmnopqrstuvwxyz .,0123456789') # original characters to use\n",
+    "alphabet=list('abcedfghijklmnopqrstuvwxyz .,0123456789') # original characters \n",
     "\n",
-    "# we want to shuffle the alphabet to create our secret code\n",
+    "# we want to shuffle the alphabet to create our Encryption key \n",
     "# we use a function for that. \n",
     "\n",
     "def mixed(x):\n",
@@ -64,15 +58,16 @@
     "shuffled=mixed(alphabet)\n",
     "\n",
     "# now we have the alphabet and shuffled version\n",
-    "# we can create our Encryption and Decryption dictionary blocks\n",
+    "# we can create our Encryption and Decryption keys (Python dictionaries)\n",
     "\n",
     "encr_level1 = dict(zip(alphabet, shuffled))\n",
     "decr_level1 = dict(zip(shuffled, alphabet))\n",
     "\n",
-    "# plese print and analyze them (just remove # below)\n",
+    "# please print and analyze them (just remove # below)\n",
+    "\n",
     "\n",
     "#print(encr_level1)\n",
-    "#print(decr_level1)\n"
+    "#print(decr_level1)"
    ]
   },
   {
@@ -156,20 +151,19 @@
    "source": [
     "# Part II - All possible characters in a keyboard\n",
     "\n",
-    "This section we will use all possible characters as our alphabet. This could be done easly using Python's ```string``` module. "
+    "In this section, we will use all possible characters as our alphabet. This could be done easily using Python's ```string``` module."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 489,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WO||c;Y!OiS;DD>l;ypO;iO^S;N6rr6ci@;vO}O|;m;YaS6}YSOL;/D+\"/;LO|6}Oj\n",
-      "Hello agent 007. The next mission: Level 3 activated #0$%# deliver\n"
+      "GL^YM#MU^7^zX:0#z:Mc^%dov%^cMU0#Mp\n"
      ]
     }
    ],
@@ -188,14 +182,14 @@
     "encr_level1 = dict(zip(alphabet, shuffled))\n",
     "decr_level1 = dict(zip(shuffled, alphabet))\n",
     "\n",
-    "# using the same functions above we can encrypt more complecated messages\n",
+    "# using the same functions above we can encrypt more complicated messages\n",
     "message='Hello agent 007. The next mission: Level 3 activated #0$%# deliver'\n",
     "\n",
     "ciphertext=encrp1(message) # Encrypted message\n",
-    "print(ciphertext)\n",
+    "#print(ciphertext)\n",
     "\n",
     "original_message=decrp1(ciphertext)\n",
-    "print(original_message)\n"
+    "#print(original_message)\n"
    ]
   },
   {
@@ -204,9 +198,9 @@
    "source": [
     "# Part III - More than one character to create ciphertext\n",
     "\n",
-    "At this moment when we encrypt ```Hello``` for example we got our ciphertext as ```3azzm```. Whenever we use ```encr_level1``` to encode ```Hello``` we will get same  ciphertext```3azzm```. Also ```l``` will be always ```z``` and that makes it easy to crack this code. Now we will use three different characters to represent letters in the ```plaintext```.  \n",
+    "At this moment when we encrypt ```Hello``` for example, we got our ciphertext as ```3azzm```. Whenever we use ```encr_level1``` to encode ```Hello``` we will get the same ciphertext```3azzm```. Also ```l``` will be always ```z``` and that makes it easy to crack this code. Now we will use three different characters to represent letters in the ```plaintext```.  \n",
     "\n",
-    "For example, let's assume we have our alphabet ```['A','B','C']``` and we want to encode ```A``` as either ```S``` or ```M```, ```B``` as either ```R``` or ```T```, and ```C``` as either ```J``` or ```O```. \n"
+    "For example, let's assume we have our alphabet ```['A','B','C']``` and we want to encode ```A``` as either ```S``` or ```M```, ```B``` as either ```R``` or ```T```, and ```C``` as either ```J``` or ```O```. "
    ]
   },
   {
@@ -316,7 +310,7 @@
    "source": [
     "###############\n",
     "\n",
-    "Example above ```Hello``` is encoded as ```P1ňǆƦ```. If we run the aove cell we will get different ciphertext. ```Hello``` is now ```ƽ÷ǆňM``` and again ```ÿ1ňǆñ```. Also you can see that letter ```l``` is different for all cases obove. "
+    "The example above ```Hello``` is encoded as ```P1ňǆƦ```. If we run the above cell we will get different ciphertext. ```Hello``` is now ```ƽ÷ǆňM``` and again ```ÿ1ňǆñ```. Also, you can see that letter ```l``` is different for all cases above. "
    ]
   },
   {
@@ -325,7 +319,7 @@
    "source": [
     "# Part IV - Using a file  \n",
     "\n",
-    "Assume that you want to send a text file and want to make sure that is Encrypted. This could be also a username/password file, etc. Our file name is ```test.txt```. \n"
+    "Assume that you want to send a text file and want to make sure that it is Encrypted. This could be also a username/password file, etc. Our file name is ```test.txt```. \n"
    ]
   },
   {
