--- a/Encryption_E.ipynb
+++ b/Encryption_E.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic Encryption and Decryption with Evren\n",
+    "# Basic Encryption and Decryption - Old School\n",
     "\n",
     "My son wanted to create a simple Encryption using Python a few weeks ago. His idea was to write possible characters that are used in English on a paper (Originals) and then creating Encryption Key for them (ENC) randomly. After that, he created two lists that are shown below and dictionaries (E_ENC and E_DEC) for Encryption /Decryption keys. "
    ]
