--- a/IEEECTX_June_2020.ipynb
+++ b/IEEECTX_June_2020.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "# Basic Encryption and Decryption using Python\n",
     "\n",
-    "When we send a message over a network (any type of format), it is possible that it can be captured by a third party. This could be a problem if the message contains some important information such as username, password, bank information, etc. This type of communication can be seen in Figure 1 below.  \n",
+    "When we send a message over a network in any format, it is possible that it can be captured by a third party intruder. This could be a problem if the message contains important information such as username, password, bank information, etc. This type of communication can be seen in Figure 1 below.  \n",
     "\n",
     "![Communication wothout Encryption](pic/Enc011.png)\n",
     "\n",
     "<center>Figure 1. Communication without Encryption/Decryption</center>\n",
     "&nbsp;\n",
     "\n",
-    "One way to protect the information is by using Encryption. Encryption is the process of converting a message (plaintext) into a meaningless message (ciphertext). Even if this ciphertext is captured by a third party (a culprit, etc.), it will be difficult to understand without the required information such as a decryption key. After the receiver receives the chipertext, the original message (plaintext) will be recovered using Decryption. Decryption is the process of converting a meaningless message (Ciphertext) into its original form (Plaintext). A basic communication scheme with Encryption/Decryption is shown in Figure 2 below.\n",
+    "One way to protect the information is by using encryption. Encryption is the process of converting a message (plaintext) into a meaningless message (ciphertext). Even if this ciphertext is captured by a third party (a culprit, etc.), it will be difficult to understand without the required information, such as a decryption key. After the receiver receives the ciphertext, the original message (plaintext) will be recovered using decryption. Decryption is the process of converting a meaningless message (ciphertext) back into its original form (plaintext). A basic communication scheme with encryption/decryption is shown in Figure 2 below.\n",
     "\n",
     "![GitHub Logo](pic/Enc02.png)\n",
     "\n",
@@ -21,7 +21,7 @@
     "\n",
     "&nbsp;\n",
     "\n",
-    "A simple Encryption/Decryption example is shown in Figure 3. A user registers on a website and enters his/her information. This information will be stored in a database but it will be encrypted before stored. This will create extra protection even the database is hacked and all stored information is stolen. \n",
+    "A simple encryption/decryption example is shown in Figure 3. A user registers on a website and enters his/her information. This information will be stored in a database but it will be encrypted before stored. This will create extra protection even if the database is hacked and all stored information is stolen. \n",
     "\n",
     "![GitHub Logo](pic/Enc03.png)\n",
     "\n",
@@ -198,7 +198,7 @@
    "source": [
     "# Part III - More than one character to create ciphertext\n",
     "\n",
-    "At this moment when we encrypt ```Hello``` for example, we got our ciphertext as ```3azzm```. Whenever we use ```encr_level1``` to encode ```Hello``` we will get the same ciphertext```3azzm```. Also ```l``` will be always ```z``` and that makes it easy to crack this code. Now we will use three different characters to represent letters in the ```plaintext```.  \n",
+    "When we encrypt ```Hello``` for example, our ciphertext appears as ```3azzm```. Whenever we use ```encr_level1``` to encode ```Hello``` we will get the same ciphertext```3azzm```. In addition, ```l``` will always be ```z```, and that makes it easy to crack this code. Now we will use three different characters to represent letters in ```plaintext```.  \n",
     "\n",
     "For example, let's assume we have our alphabet ```['A','B','C']``` and we want to encode ```A``` as either ```S``` or ```M```, ```B``` as either ```R``` or ```T```, and ```C``` as either ```J``` or ```O```. "
    ]
@@ -310,7 +310,7 @@
    "source": [
     "###############\n",
     "\n",
-    "The example above ```Hello``` is encoded as ```P1ňǆƦ```. If we run the above cell we will get different ciphertext. ```Hello``` is now ```ƽ÷ǆňM``` and again ```ÿ1ňǆñ```. Also, you can see that letter ```l``` is different for all cases above. "
+    "In the example above, ```Hello``` is encoded as ```P1ňǆƦ```. If we run the above cell we will get different ciphertext. ```Hello``` is now ```ƽ÷ǆňM``` and again ```ÿ1ňǆñ```. Also, you can see that letter ```l``` is different for all cases above. "
    ]
   },
   {
@@ -319,7 +319,7 @@
    "source": [
     "# Part IV - Using a file  \n",
     "\n",
-    "Assume that you want to send a text file and want to make sure that it is Encrypted. This could be also a username/password file, etc. Our file name is ```test.txt```. \n"
+    "Assume that you want to send a text file and want to make sure that it is encrypted. This could also be a username/password file, etc. Our file name is ```test.txt```. \n"
    ]
   },
   {
